; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_editor.c_set_ns_align.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_editor.c_set_ns_align.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

@NSSTATE_ATTRIBUTE = common dso_local global i32 0, align 4
@NSCMD_ALIGN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, i8*)* @set_ns_align to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_ns_align(%struct.TYPE_6__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 0
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  br label %25

13:                                               ; preds = %2
  %14 = call i32* (...) @create_nscommand_params()
  store i32* %14, i32** %5, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = load i32, i32* @NSSTATE_ATTRIBUTE, align 4
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @nsICommandParams_SetCStringValue(i32* %15, i32 %16, i8* %17)
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %20 = load i32, i32* @NSCMD_ALIGN, align 4
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @do_ns_command(%struct.TYPE_6__* %19, i32 %20, i32* %21)
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @nsICommandParams_Release(i32* %23)
  br label %25

25:                                               ; preds = %13, %12
  ret void
}

declare dso_local i32* @create_nscommand_params(...) #1

declare dso_local i32 @nsICommandParams_SetCStringValue(i32*, i32, i8*) #1

declare dso_local i32 @do_ns_command(%struct.TYPE_6__*, i32, i32*) #1

declare dso_local i32 @nsICommandParams_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
